--- a/charts/kthena/charts/workload/crds/workload.serving.volcano.sh_modelservings.yaml
+++ b/charts/kthena/charts/workload/crds/workload.serving.volcano.sh_modelservings.yaml
@@ -133,11 +133,11 @@ spec:
                           ```yaml
                           gangPolicy:
                             minRoleReplicas:
-                              Prefill: 1
-                              Decode: 1
+                              prefill: 1
+                              decode: 1
                           ```
                           It will result in the following behavior:
-                          At least one prefill and one decode must be scheduled before any of the pods in the serving group can run.\
+                          At least one prefill and one decode must be scheduled before any of the pods in the serving group can run.
                           And pods within a role must be scheduled together.
                         type: object
                         x-kubernetes-validations:
