--- a/pkg/model-booster-controller/convert/templates/vllm-pd.yaml
+++ b/pkg/model-booster-controller/convert/templates/vllm-pd.yaml
@@ -14,6 +14,7 @@ spec:
       - name: prefill
         replicas: ${PREFILL_REPLICAS}
         entryTemplate:
+          metadata: ${SERVER_ENTRY_TEMPLATE_METADATA}
           spec:
             initContainers: ${INIT_CONTAINERS}
             containers:
@@ -66,6 +67,7 @@ spec:
       - name: decode
         replicas: ${DECODE_REPLICAS}
         entryTemplate:
+          metadata: ${SERVER_ENTRY_TEMPLATE_METADATA}
           spec:
             initContainers: ${INIT_CONTAINERS}
             containers:
