--- a/charts/kthena/charts/workload/templates/kthena-controller-manager/rbac/cluster-role.yaml
+++ b/charts/kthena/charts/workload/templates/kthena-controller-manager/rbac/cluster-role.yaml
@@ -84,6 +84,10 @@ rules:
       - get
       - list
       - watch
+      - create
+      - update
+      - patch
+      - delete
   - apiGroups:
       - workload.serving.volcano.sh
     resources:
