--- a/charts/kthena/charts/workload/crds/workload.serving.volcano.sh_modelservings.yaml
+++ b/charts/kthena/charts/workload/crds/workload.serving.volcano.sh_modelservings.yaml
@@ -65,19 +65,6 @@ spec:
                       RollingUpdateConfiguration defines the parameters to be used when type is RollingUpdateStrategyType.
                       optional
                     properties:
-                      maxSurge:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: 0
-                        description: |-
-                          The maximum number of replicas that can be scheduled above the original number of
-                          replicas.
-                          Value can be an absolute number (ex: 5) or a percentage of total replicas at
-                          the start of the update (ex: 10%).
-                          Absolute number is calculated from percentage by rounding up.
-                          By default, a value of 0 is used.
-                        x-kubernetes-int-or-string: true
                       maxUnavailable:
                         anyOf:
                         - type: integer
@@ -87,7 +74,7 @@ spec:
                           The maximum number of replicas that can be unavailable during the update.
                           Value can be an absolute number (ex: 5) or a percentage of total replicas at the start of update (ex: 10%).
                           Absolute number is calculated from percentage by rounding down.
-                          This can not be 0 if MaxSurge is 0.
+                          This can not be 0.
                           By default, a fixed value of 1 is used.
                         x-kubernetes-int-or-string: true
                       partition:
