--- a/charts/kthena/charts/workload/templates/kthena-controller-manager/component/mutating-webhook.yaml
+++ b/charts/kthena/charts/workload/templates/kthena-controller-manager/component/mutating-webhook.yaml
@@ -1,4 +1,13 @@
 {{- if .Values.controllerManager.webhook.enabled }}
+{{- $existingWebhooks := dict }}
+{{- if not (eq .Values.global.certManagementMode "manual") }}
+  {{- $obj := lookup "admissionregistration.k8s.io/v1" "MutatingWebhookConfiguration" "" "kthena-controller-manager-mutating-webhook" }}
+  {{- if $obj }}
+    {{- range $obj.webhooks }}
+      {{- $_ := set $existingWebhooks .name .clientConfig.caBundle }}
+    {{- end }}
+  {{- end }}
+{{- end }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
@@ -23,7 +32,7 @@ webhooks:
         path: "/mutate/modelbooster"
         port: 443
       {{- if or (eq .Values.global.certManagementMode "auto") (eq .Values.global.certManagementMode "cert-manager") }}
-      caBundle: ""
+      caBundle: {{ get $existingWebhooks "mutate-modelbooster.volcano.sh" | default "" }}
       {{- else }}
       caBundle: {{ required "A caBundle is required for the registry mutating webhook when certManagementMode is set to 'manual' (global.webhook.caBundle)" .Values.global.webhook.caBundle | quote }}
       {{- end }}
@@ -47,7 +56,7 @@ webhooks:
         path: "/mutate/autoscalingpolicy"
         port: 443
       {{- if or (eq .Values.global.certManagementMode "auto") (eq .Values.global.certManagementMode "cert-manager") }}
-      caBundle: ""
+      caBundle: {{ get $existingWebhooks "mutate-autoscalingpolicy.volcano.sh" | default "" }}
       {{- else }}
       caBundle: {{ required "A caBundle is required for the registry mutating webhook when certManagementMode is set to 'manual' (global.webhook.caBundle)" .Values.global.webhook.caBundle | quote }}
       {{- end }}
